# AxiomLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CoreLib/: CMakeLists.txt
CoreLib/etc/: coretest.conf
CoreLib/include/: CoreLib.h  List.h  ListDoubleLinked.h  Node.h  Stack.h  StringEx.h  StringList.h
CoreLib/src/: Base64.c  CoreLib.c  DateTime.c  Directory.c  Environment.c  File.c  List.c  ListDoubleLinked.c  Logger.c  StringEx.c  StringList.c
CoreLibNetwork/: CMakeLists.txt
CoreLibNetwork/include/: Responder.h
CoreLibNetwork/src/: Mail.c
CoreTest/: CMakeLists.txt  netmain.c
EdgeLib/include/: Buffer.h  Configuration.h  DateTime.h  Defines.h  Directory.h  EdgeLib.h  Environment.h  List.h  ListDoubleLinked.h  Logger.h  NetworkDefines.h  Queue.h  Stack.h  StringEx.h  Variant.h
EdgeLib/src/: Buffer.c  Configuration.c  CoreLib.c  DateTime.c  Directory.c  EdgeLib.c  Environment.c  File.c  KeyValue.c  List.c  ListDoubleLinked.c  Logger.c  Queue.c  SignalHandler.c  Stack.c  StringEx.c  Variant.c
EdgeLibIO/include/: ADC.h  HAL.h  I2C.h  SPI.h  hal.h
EdgeLibIO/src/: GPIO.c  HAL.c  PWM.c  SPI.c  UART.c  hal.c
EdgeLibNetwork/include/: Imap.h  Mail.h  Responder.h  Smtp.h
EdgeLibNetwork/src/: Imap.c  Responder.c  ResponderSsl.c  Smtp.c
EdgeLibTest/: main.c  netmain.c
core/include/: axiomlib.h  base64.h  buffer.h  datetime.h  directory.h  environment.h  file.h  keyvalue.h  list.h  listdoublelinked.h  stringex.h  variant.h  vertexlib.h  xml.h
core/src/: axiomlib.c  base64.c  buffer.c  configuration.c  datetime.c  dictionary.c  directory.c  edgelib.c  environment.c  file.c  keyvalue.c  list.c  listdoublelinked.c  logger.c  queue.c  signalhandler.c  stack.c  stringex.c  variant.c  vertexlib.c  xml.c
examples/: CMakeLists.txt
examples/Base64/: CMakeLists.txt  main.c
examples/Directory/: CMakeLists.txt  main.c
examples/File/: CMakeLists.txt  main.c
examples/List/: CMakeLists.txt  main.c
examples/Logger/: CMakeLists.txt  main.c
examples/Map/: CMakeLists.txt  main.c
examples/Queue/: CMakeLists.txt  main.c
examples/Stack/: CMakeLists.txt  main.c
examples/String/: CMakeLists.txt  main.c
examples/Tree/: CMakeLists.txt  main.c
headers/: CoreLib.h  Queue.h
include/: Base64.h  Buffer.h  Configuration.h  ConfigurationINI.h  CoreLib.h  DateTime.h  Defines.h  Dictionary.h  Directory.h  Environment.h  File.h  Imap.h  KeyValue.h  List.h  Logger.h  Mail.h  Map.h  Mime.h  Node.h  ProcessLock.h  Queue.h  Responder.h  ResponderSsl.h  SecurityType.h  SignalHandler.h  Smtp.h  Stack.h  StringEx.h  StringList.h  Tree.h  TreeNode.h  Variant.h
io/include/: CAN.h  GPIO.h  HALTypes.h  PWM.h  UART.h  adc.h  can.h  gpio.h  hal.h  haltypes.h  i2c.h  pwm.h  spi.h  uart.h
io/src/: ADC.c  CAN.c  I2C.c  adc.c  can.c  gpio.c  hal.c  i2c.c  pwm.c  spi.c  uart.c
net/include/: Imap.h  Mail.h  Responder.h  responder.h  smtp.h  tcpclient.h
net/src/: Mail.c  Responder.c  Smtp.c  responder.c  smtp.c  tcpclient.c
project/: CMakeLists.txt
project/c/: CMakeLists.txt
project/c/include/: Buffer.h  KeyValue.h  List.h  Logger.h  StringEx.h  StringList.h  Tree.h  TreeNode.h
project/c/src/: Base64.c  Directory.c  File.c  KeyValue.c  List.c  Map.c  StringEx.c  StringList.c
project/cpp/: CMakeLists.txt
project/cpp/include/: SignalHandler.hpp
project/cpp/src/: Logger.cpp  SignalHandler.cpp
project/headers/: Base64.h  CoreLib.h  KeyValue.h  List.h  Map.h  Node.h  Stack.h
project/include/: Base64.h  Buffer.h  Configuration.h  CoreLib.h  DateTime.h  Directory.h  File.h  KeyValue.h  List.h  Logger.h  Map.h  Node.h  ProcessLock.h  Queue.h  Responder.h  Stack.h  StringEx.h  StringList.h  Tree.h  TreeNode.h  Variant.h
project/sources/: Base64.c  CoreLib.c  KeyValue.c  List.c  Map.c  Node.c  Queue.c  Stack.c  StringEx.c  TreeNode.c
project/src/: Base64.c  Buffer.c  Configuration.c  CoreLib.c  DateTime.c  Directory.c  File.c  KeyValue.c  List.c  Logger.c  Map.c  Node.c  ProcessLock.c  Queue.c  Responder.c  Stack.c  StringEx.c  StringList.c  Tree.c  TreeNode.c  Variant.c
sources/: Stack.c
src/: Base64.c  Buffer.c  Configuration.c  ConfigurationINI.c  CoreLib.c  DateTime.c  Dictionary.c  Directory.c  Environment.c  File.c  Imap.c  KeyValue.c  List.c  Logger.c  Mail.c  Map.c  ProcessLock.c  Queue.c  Responder.c  ResponderSsl.c  SignalHandler.c  Smtp.c  Stack.c  StringEx.c  StringList.c
test/: main.c
tests/: main.c  netmain.c
