cmake_minimum_required(VERSION 3.30)

set(Project EdgeLib)
project(${Project})

set(LIB_VERSION_MAJOR 1)
set(LIB_VERSION_MINOR 0)
set(LIB_VERSION_PATCH 0)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(PROJECT_EDGELIB_SOURCE_DIR ./core/src)
set(PROJECT_EDGELIB_INCLUDE_DIR ./core/include)
set(PROJECT_EDGELIB_NETWORK_SOURCE_DIR ./net/src)
set(PROJECT_EDGELIB_NETWORK_INCLUDE_DIR ./net/include)
set(PROJECT_EDGELIB_IO_SOURCE_DIR ./io/src)
set(PROJECT_EDGELIB_IO_INCLUDE_DIR ./io/include)


include_directories(${PROJECT_EDGELIB_INCLUDE_DIR} ${PROJECT_EDGELIB_NETWORK_INCLUDE_DIR} ${PROJECT_EDGELIB_IO_INCLUDE_DIR} /usr/include/ /usr/local/include/)
link_libraries(rt pthread dl)
link_directories(/usr/local/lib/ /usr/lib/ /lib/)

set(SOURCES
${SOURCES}
${PROJECT_EDGELIB_SOURCE_DIR}/base64.c
${PROJECT_EDGELIB_SOURCE_DIR}/buffer.c
${PROJECT_EDGELIB_SOURCE_DIR}/keyvalue.c
${PROJECT_EDGELIB_SOURCE_DIR}/list.c
${PROJECT_EDGELIB_SOURCE_DIR}/listdoublelinked.c
${PROJECT_EDGELIB_SOURCE_DIR}/queue.c
${PROJECT_EDGELIB_SOURCE_DIR}/stack.c
${PROJECT_EDGELIB_SOURCE_DIR}/stringex.c
${PROJECT_EDGELIB_SOURCE_DIR}/file.c
${PROJECT_EDGELIB_SOURCE_DIR}/directory.c
${PROJECT_EDGELIB_SOURCE_DIR}/logger.c
${PROJECT_EDGELIB_SOURCE_DIR}/signalhandler.c
${PROJECT_EDGELIB_SOURCE_DIR}/environment.c
${PROJECT_EDGELIB_SOURCE_DIR}/configuration.c
${PROJECT_EDGELIB_SOURCE_DIR}/datetime.c
${PROJECT_EDGELIB_SOURCE_DIR}/variant.c
${PROJECT_EDGELIB_SOURCE_DIR}/dictionary.c
${PROJECT_EDGELIB_SOURCE_DIR}/edgelib.c
)

set(HEADERS
${HEADERS}
${PROJECT_EDGELIB_INCLUDE_DIR}/defines.h
${PROJECT_EDGELIB_INCLUDE_DIR}/networkdefines.h
${PROJECT_EDGELIB_INCLUDE_DIR}/processdefines.h
${PROJECT_EDGELIB_INCLUDE_DIR}/base64.h
${PROJECT_EDGELIB_INCLUDE_DIR}/buffer.h
${PROJECT_EDGELIB_INCLUDE_DIR}/keyvalue.h
${PROJECT_EDGELIB_INCLUDE_DIR}/list.h
${PROJECT_EDGELIB_INCLUDE_DIR}/listdoublelinked.h
${PROJECT_EDGELIB_INCLUDE_DIR}/queue.h
${PROJECT_EDGELIB_INCLUDE_DIR}/stack.h
${PROJECT_EDGELIB_INCLUDE_DIR}/stringex.h
${PROJECT_EDGELIB_INCLUDE_DIR}/file.h
${PROJECT_EDGELIB_INCLUDE_DIR}/directory.h
${PROJECT_EDGELIB_INCLUDE_DIR}/logger.h
${PROJECT_EDGELIB_INCLUDE_DIR}/signalHandler.h
${PROJECT_EDGELIB_INCLUDE_DIR}/environment.h
${PROJECT_EDGELIB_INCLUDE_DIR}/configuration.h
${PROJECT_EDGELIB_INCLUDE_DIR}/datetime.h
${PROJECT_EDGELIB_INCLUDE_DIR}/variant.h
${PROJECT_EDGELIB_INCLUDE_DIR}/dictionary.h
${PROJECT_EDGELIB_INCLUDE_DIR}/edgelib.h
)

set(NETWORK_SOURCES
${NETWORK_SOURCES}
${PROJECT_EDGELIB_NETWORK_SOURCE_DIR}/responder.c
#${PROJECT_EDGELIB_NETWORK_SOURCE_DIR}/ResponderSsl.c
${PROJECT_EDGELIB_NETWORK_SOURCE_DIR}/mail.c
${PROJECT_EDGELIB_NETWORK_SOURCE_DIR}/imap.c
${PROJECT_EDGELIB_NETWORK_SOURCE_DIR}/smtp.c
)

set(NETWORK_HEADERS
${NETWORK_HEADERS}
${PROJECT_EDGELIB_NETWORK_INCLUDE_DIR}/responder.h
#${PROJECT_EDGELIB_NETWORK_INCLUDE_DIR}/ResponderSsl.h
${PROJECT_EDGELIB_NETWORK_INCLUDE_DIR}/mail.h
${PROJECT_EDGELIB_NETWORK_INCLUDE_DIR}/mime.h
${PROJECT_EDGELIB_NETWORK_INCLUDE_DIR}/securitytype.h
${PROJECT_EDGELIB_NETWORK_INCLUDE_DIR}/imap.h
${PROJECT_EDGELIB_NETWORK_INCLUDE_DIR}/smtp.h
)

set(IO_SOURCES
${IO_SOURCES}
${PROJECT_EDGELIB_IO_SOURCE_DIR}/hal.c
${PROJECT_EDGELIB_IO_SOURCE_DIR}/i2c.c
${PROJECT_EDGELIB_IO_SOURCE_DIR}/spi.c
${PROJECT_EDGELIB_IO_SOURCE_DIR}/uart.c
${PROJECT_EDGELIB_IO_SOURCE_DIR}/pwm.c
${PROJECT_EDGELIB_IO_SOURCE_DIR}/adc.c
${PROJECT_EDGELIB_IO_SOURCE_DIR}/gpio.c
${PROJECT_EDGELIB_IO_SOURCE_DIR}/can.c
)

set(IO_HEADERS
${IO_HEADERS}
${PROJECT_EDGELIB_IO_INCLUDE_DIR}/hal.h
${PROJECT_EDGELIB_IO_INCLUDE_DIR}/haltypes.h
${PROJECT_EDGELIB_IO_INCLUDE_DIR}/i2c.h
${PROJECT_EDGELIB_IO_INCLUDE_DIR}/spi.h
${PROJECT_EDGELIB_IO_INCLUDE_DIR}/pwm.h
${PROJECT_EDGELIB_IO_INCLUDE_DIR}/adc.h
${PROJECT_EDGELIB_IO_INCLUDE_DIR}/gpio.h
${PROJECT_EDGELIB_IO_INCLUDE_DIR}/can.h
)


add_library(${Project} SHARED ${SOURCES} ${HEADERS})
add_library(${Project}.Network SHARED ${SOURCES} ${HEADERS} ${NETWORK_SOURCES} ${NETWORK_HEADERS})
add_library(${Project}.IO SHARED ${SOURCES} ${HEADERS} ${IO_SOURCES} ${IO_HEADERS})

add_executable(${Project}.bin ${SOURCES} ${HEADERS} ./EdgeLibTest/main.c)
add_executable(${Project}.Network.bin ${SOURCES} ${HEADERS} ${NETWORK_SOURCES} ${NETWORK_HEADERS} ./EdgeLibTest/netmain.c)
add_executable(${Project}.IO.bin ${SOURCES} ${HEADERS} ${IO_SOURCES} ${IO_HEADERS} ./EdgeLibTest/iomain.c)

set(CPACK_PACKAGE_FILE_NAME ${Project}.${CMAKE_SYSTEM_PROCESSOR}.${LIB_VERSION_MAJOR}.${LIB_VERSION_MINOR}.${LIB_VERSION_PATCH})
set(CPACK_PACKAGE_DESCRIPTION, "Core C Utilities")

set(CPACK_GENERATOR "DEB")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Subrato Roy")
install(TARGETS ${Project} DESTINATION local/lib)
install(FILES ${HEADERS} DESTINATION local/include/CoreLib)

include(CPack)




