cmake_minimum_required(VERSION 3.30)

set(Project Axiom)
project(${Project})

set(LIB_VERSION_MAJOR 1)
set(LIB_VERSION_MINOR 0)
set(LIB_VERSION_PATCH 0)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(PROJECT_AXIOMLIB_SOURCE_DIR ./core/src)
set(PROJECT_AXIOMLIB_INCLUDE_DIR ./core/include)
set(PROJECT_AXIOMLIB_NETWORK_SOURCE_DIR ./net/src)
set(PROJECT_AXIOMLIB_NETWORK_INCLUDE_DIR ./net/include)
set(PROJECT_AXIOMLIB_IO_SOURCE_DIR ./io/src)
set(PROJECT_AXIOMLIB_IO_INCLUDE_DIR ./io/include)


include_directories(${PROJECT_AXIOMLIB_INCLUDE_DIR} ${PROJECT_AXIOMLIB_NETWORK_INCLUDE_DIR} ${PROJECT_AXIOMLIB_IO_INCLUDE_DIR} /usr/include/ /usr/local/include/)
link_libraries(rt pthread dl)
link_directories(/usr/local/lib/ /usr/lib/ /lib/)

set(SOURCES
${SOURCES}
${PROJECT_AXIOMLIB_SOURCE_DIR}/base64.c
${PROJECT_AXIOMLIB_SOURCE_DIR}/buffer.c
${PROJECT_AXIOMLIB_SOURCE_DIR}/keyvalue.c
${PROJECT_AXIOMLIB_SOURCE_DIR}/list.c
${PROJECT_AXIOMLIB_SOURCE_DIR}/listdoublelinked.c
${PROJECT_AXIOMLIB_SOURCE_DIR}/queue.c
${PROJECT_AXIOMLIB_SOURCE_DIR}/stack.c
${PROJECT_AXIOMLIB_SOURCE_DIR}/stringex.c
${PROJECT_AXIOMLIB_SOURCE_DIR}/file.c
${PROJECT_AXIOMLIB_SOURCE_DIR}/directory.c
${PROJECT_AXIOMLIB_SOURCE_DIR}/logger.c
${PROJECT_AXIOMLIB_SOURCE_DIR}/signalhandler.c
${PROJECT_AXIOMLIB_SOURCE_DIR}/environment.c
${PROJECT_AXIOMLIB_SOURCE_DIR}/configuration.c
${PROJECT_AXIOMLIB_SOURCE_DIR}/datetime.c
${PROJECT_AXIOMLIB_SOURCE_DIR}/variant.c
${PROJECT_AXIOMLIB_SOURCE_DIR}/dictionary.c
${PROJECT_AXIOMLIB_SOURCE_DIR}/axiomlib.c
)

set(HEADERS
${HEADERS}
${PROJECT_AXIOMLIB_INCLUDE_DIR}/defines.h
${PROJECT_AXIOMLIB_INCLUDE_DIR}/networkdefines.h
${PROJECT_AXIOMLIB_INCLUDE_DIR}/processdefines.h
${PROJECT_AXIOMLIB_INCLUDE_DIR}/base64.h
${PROJECT_AXIOMLIB_INCLUDE_DIR}/buffer.h
${PROJECT_AXIOMLIB_INCLUDE_DIR}/keyvalue.h
${PROJECT_AXIOMLIB_INCLUDE_DIR}/list.h
${PROJECT_AXIOMLIB_INCLUDE_DIR}/listdoublelinked.h
${PROJECT_AXIOMLIB_INCLUDE_DIR}/queue.h
${PROJECT_AXIOMLIB_INCLUDE_DIR}/stack.h
${PROJECT_AXIOMLIB_INCLUDE_DIR}/stringex.h
${PROJECT_AXIOMLIB_INCLUDE_DIR}/file.h
${PROJECT_AXIOMLIB_INCLUDE_DIR}/directory.h
${PROJECT_AXIOMLIB_INCLUDE_DIR}/logger.h
${PROJECT_AXIOMLIB_INCLUDE_DIR}/signalhandler.h
${PROJECT_AXIOMLIB_INCLUDE_DIR}/environment.h
${PROJECT_AXIOMLIB_INCLUDE_DIR}/configuration.h
${PROJECT_AXIOMLIB_INCLUDE_DIR}/datetime.h
${PROJECT_AXIOMLIB_INCLUDE_DIR}/variant.h
${PROJECT_AXIOMLIB_INCLUDE_DIR}/dictionary.h
${PROJECT_AXIOMLIB_INCLUDE_DIR}/axiomlib.h
)

set(NETWORK_SOURCES
${NETWORK_SOURCES}
${PROJECT_AXIOMLIB_NETWORK_SOURCE_DIR}/responder.c
#${PROJECT_AXIOMLIB_NETWORK_SOURCE_DIR}/ResponderSsl.c
${PROJECT_AXIOMLIB_NETWORK_SOURCE_DIR}/mail.c
${PROJECT_AXIOMLIB_NETWORK_SOURCE_DIR}/imap.c
${PROJECT_AXIOMLIB_NETWORK_SOURCE_DIR}/smtp.c
)

set(NETWORK_HEADERS
${NETWORK_HEADERS}
${PROJECT_AXIOMLIB_NETWORK_INCLUDE_DIR}/responder.h
#${PROJECT_AXIOMLIB_NETWORK_INCLUDE_DIR}/ResponderSsl.h
${PROJECT_AXIOMLIB_NETWORK_INCLUDE_DIR}/mail.h
${PROJECT_AXIOMLIB_NETWORK_INCLUDE_DIR}/mime.h
${PROJECT_AXIOMLIB_NETWORK_INCLUDE_DIR}/securitytypes.h
${PROJECT_AXIOMLIB_NETWORK_INCLUDE_DIR}/imap.h
${PROJECT_AXIOMLIB_NETWORK_INCLUDE_DIR}/smtp.h
)

set(IO_SOURCES
${IO_SOURCES}
${PROJECT_AXIOMLIB_IO_SOURCE_DIR}/hal.c
${PROJECT_AXIOMLIB_IO_SOURCE_DIR}/i2c.c
${PROJECT_AXIOMLIB_IO_SOURCE_DIR}/spi.c
${PROJECT_AXIOMLIB_IO_SOURCE_DIR}/uart.c
${PROJECT_AXIOMLIB_IO_SOURCE_DIR}/pwm.c
${PROJECT_AXIOMLIB_IO_SOURCE_DIR}/adc.c
${PROJECT_AXIOMLIB_IO_SOURCE_DIR}/gpio.c
${PROJECT_AXIOMLIB_IO_SOURCE_DIR}/can.c
)

set(IO_HEADERS
${IO_HEADERS}
${PROJECT_AXIOMLIB_IO_INCLUDE_DIR}/hal.h
${PROJECT_AXIOMLIB_IO_INCLUDE_DIR}/haltypes.h
${PROJECT_AXIOMLIB_IO_INCLUDE_DIR}/i2c.h
${PROJECT_AXIOMLIB_IO_INCLUDE_DIR}/spi.h
${PROJECT_AXIOMLIB_IO_INCLUDE_DIR}/pwm.h
${PROJECT_AXIOMLIB_IO_INCLUDE_DIR}/adc.h
${PROJECT_AXIOMLIB_IO_INCLUDE_DIR}/gpio.h
${PROJECT_AXIOMLIB_IO_INCLUDE_DIR}/can.h
)


add_library(${Project} SHARED ${SOURCES} ${HEADERS})
add_library(${Project}.net SHARED ${SOURCES} ${HEADERS} ${NETWORK_SOURCES} ${NETWORK_HEADERS})
add_library(${Project}.io SHARED ${SOURCES} ${HEADERS} ${IO_SOURCES} ${IO_HEADERS})

add_executable(${Project}.test.bin ${SOURCES} ${HEADERS} ./tests/main.c)
add_executable(${Project}.test_net.bin ${SOURCES} ${HEADERS} ${NETWORK_SOURCES} ${NETWORK_HEADERS} ./tests/netmain.c)
add_executable(${Project}.test_io.bin ${SOURCES} ${HEADERS} ${IO_SOURCES} ${IO_HEADERS} ./tests/iomain.c)

set(CPACK_PACKAGE_FILE_NAME ${Project}.${CMAKE_SYSTEM_PROCESSOR}.${LIB_VERSION_MAJOR}.${LIB_VERSION_MINOR}.${LIB_VERSION_PATCH})
set(CPACK_PACKAGE_DESCRIPTION, "Core C Utilities")

set(CPACK_GENERATOR "DEB")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Subrato Roy")
install(TARGETS ${Project} DESTINATION local/lib)
install(FILES ${HEADERS} DESTINATION local/include/CoreLib)

include(CPack)




